--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
     </header>
 	<nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products categories</a></li>
+            <li><a href="TP1 ACILA.html">Home</a></li>
+            <li><a href="products categories.html">Products categories</a></li>
             <li><a href="contact.html">To contact us</a></li>
         </ul>
     </nav>
