--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
 <body>
 	<header>
-        <h1> To contact us</h1>
+        <h1> Tell us about your feedback</h1>
     </header>
 	<nav>
         <ul>
