--- a/products categories.html
+++ b/products categories.html
@@ -5,6 +5,7 @@
 <title>products categories</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+	<title>Encadrer un titre en HTML5</title>
 </head>
 
 <body>
@@ -13,26 +14,32 @@
     </header>
 <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="TP1 ACILA.html">Home</a></li>
             <li><a href="products categories.html">Products categories</a></li>
-            <li><a href="To contact us.html">To contact us</a></li>
+            <li><a href="contact.html">To contact us</a></li>
         </ul>
     </nav>
 	<main>
         <section>
-            <h2>Accessoires </h2>
+		  <fieldset>
+        <legend>Our</legend>
+            <h2>Accessories </h2>
+		</fieldset>
             <ul class="Products categories-list">
                 <li>
-					<h3>Bague Diament</h3>
+					<h3>Dimond Ring </h3>
                     <img src="file:///C|/Users/user/Documents/INIT WEB/bague.jpg" alt="Product 1">
-                    <p class="description">Bague en diamant 1 Ct, bague de fiançailles Queen Crown, or blanc 14 carats.</p>
-                    <p class="price">seulement à 159,91 CA$</p>
+                    <p class="description">Dimond Ring 1 Ct, bague de fiançailles Queen Crown, or blanc 14 carats.</p>
+                    <p class="price">only for 159,91 CA$</p>
                 </li>
                 <li>
-					<h3>Boucles </h3>
+					<fieldset>
+					<legend>Our</legend>
+					<h3>Earrings </h3>
+					</fieldset>
                     <img src="file:///C|/Users/user/Documents/INIT WEB/boucles-doreilles-de-mariage-longues-540x492.jpg" alt="Product 2">                   
-                    <p class="description">niiiiiiiiiiiice.</p>
-                    <p class="price">seulement à 66,00 €</p>
+                    <p class="description">very beautifull earrings.</p>
+                    <p class="price">only for 66,00 €</p>
                 </li>
             </ul>
         </section>
@@ -40,21 +47,26 @@
       
 
         <section>
-            <h2>Meuble salon</h2>
+			<fieldset>
+			<legend>Our</legend>
+            <h2>Living room furniture</h2>
+			</fieldset>	
             <ul class="Products categories -list">
-                <li>
-					<h3>salon comfortable</h3>
+                <li>	
                     <img src="file:///C|/Users/user/Documents/INIT WEB/salon foteuille.jpg" alt="Product">
                     
                     <p class="description">La nouvelle collection HomeSalons, c’est également des modèles qui s’affirment, par leurs formes et leurs finitions.</p>
-                    <p class="price">seulement à 2 229,90 €</p>
+                    <p class="price">only for 2 229,90 €</p>
                 </li>
                 <li>
+					<fieldset>
+					<legend>Our</legend>	
 					<h3>Table de cuisine</h3>
+					</fieldset>	
                   <img src="../../../Documents/INIT WEB/table.webp" alt="Product 2">
-<p class="description">Ensemble de table de salle à manger avec base plaquée or, luxe, 6 places
+                  <p class="description">Ensemble de table de salle à manger avec base plaquée or, luxe, 6 places.
                   </p>
-                    <p class="price">seulement à 3 087,33 €</p>
+                    <p class="price">only for 3 087,33 €</p>
                 </li>
             </ul>
         </section>
