--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
 <body>
 	<header>
-        <h1> Tell us about your feedback</h1>
+        <h1 style="color: rebeccapurple;"> Tell us about your feedback</h1>
     </header>
 	<nav>
         <ul>
@@ -19,7 +19,7 @@
 	<main>
         <section>
             
-            <p>Get in touch with us by compliting all the information below:</p>
+            <p style="color: mediumvioletred;">Get in touch with us by compliting all the information below:</p>
             <form action="submit_contact_form.php" method="post">
                 <label for="name">Mr/Ms:</label>
                 <input type="text" id="name" name="name" required="">
