--- a/products categories.html
+++ b/products categories.html
@@ -28,7 +28,7 @@
             <ul class="Products categories-list">
                 <li>
 					<h3>Dimond Ring </h3>
-                    <a href="../../../Documents/INIT WEB/bague.jpg"><img src="file:///C|/Users/user/Documents/INIT WEB/bague.jpg" alt="Product 1"></a>
+                    <a href="/bague.jpg"><img src="file:///C|/Users/user/Documents/INIT WEB/bague.jpg" alt="Product 1"></a>
 <p class="description">Dimond Ring 1 Ct, bague de fiançailles Queen Crown, or blanc 14 carats.</p>
                     <p class="price">only for 159,91 CA$</p>
                 </li>
